[gd_scene load_steps=3 format=3 uid="uid://dsk3bqbek2lm6"]

[ext_resource type="TileSet" uid="uid://chc0o8so6nq76" path="res://levels/tiles.tres" id="1_j6box"]
[ext_resource type="Script" path="res://levels/level.gd" id="2_4cikw"]

[node name="Level" type="TileMap"]
texture_filter = 1
scale = Vector2(4, 4)
tile_set = ExtResource("1_j6box")
format = 2
layer_0/name = "ground"
layer_1/name = "decorations"
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array()
layer_2/name = "background"
layer_2/z_index = -2
layer_2/tile_data = PackedInt32Array()
layer_3/name = "foreground"
layer_3/z_index = 1
layer_3/tile_data = PackedInt32Array()
script = ExtResource("2_4cikw")

[node name="Start" type="Area2D" parent="."]

[node name="Finish" type="Area2D" parent="."]

[node name="LevelTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Start" to="." method="_on_start_body_entered"]
[connection signal="body_entered" from="Finish" to="." method="_on_finish_body_entered"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
